# AprilTag_ROS2__Intel-D435

./: CMakeLists.txt  QUICKSTART.md  README.md  apriltag_map.json
apriltag_detector/: README.md  setup.cfg
apriltag_detector/apriltag_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apriltag_detector/apriltag_detector/install/: local_setup.sh  setup.ps1  setup.sh
apriltag_detector/apriltag_detector/log/: latest_build
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/AprilTag/share/AprilTag/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/apriltag_detector/lib/apriltag_detector/: apriltag_map  camera_validator  record_calibration
install/apriltag_detector/share/apriltag_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
ros2_ws/: apriltag_map.json
scripts/: apriltag_map.json
